Updated code-coverage to use Arch build image
Newer packages, thus generall better coverage.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -104,7 +104,7 @@ macOS/Clang (amd64):
 # Analysis
 Code Coverage:
   stage: Analysis
-  image: stabletec/build-foe:fedora
+  image: stabletec/build-foe:arch
   tags:
     - docker-linux
   dependencies: []
