Added tests for error code header

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,12 @@ find_package(Vulkan REQUIRED)
 include_directories(../include)
 link_libraries(catch Vulkan::Vulkan)
 
+# Error Code
+add_executable(VkErrorCodeTests error_code.cpp)
+target_code_coverage(VkErrorCodeTests EXCLUDE ".*/test/.*")
+
+add_test(NAME VkErrorCodeTests-Tests COMMAND VkErrorCodeTests)
+
 # Serialization
 add_executable(VkSerializationTests parsing.cpp serialization.cpp)
 target_code_coverage(VkSerializationTests EXCLUDE ".*/test/.*")
