--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -2,6 +2,9 @@ find_package(Vulkan REQUIRED)
 
 include_directories(../include)
 
+add_executable(example_error_code error_code.cpp)
+target_link_libraries(example_error_code PRIVATE Vulkan::Vulkan)
+
 add_executable(example_string_parsing string_parsing.cpp)
 target_link_libraries(example_string_parsing PRIVATE Vulkan::Vulkan)
 
