Added Vulkan struct cleanup header
A C11 compatible single header file for cleaning up arbitrary struct
data.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -8,5 +8,5 @@ target_link_libraries(example_error_code PRIVATE Vulkan::Vulkan)
 add_executable(example_string_parsing string_parsing.cpp)
 target_link_libraries(example_string_parsing PRIVATE Vulkan::Vulkan)
 
-add_library(standalone_lib standalone.cpp)
+add_library(standalone_lib standalone.cpp standalone.c)
 target_link_libraries(standalone_lib PRIVATE Vulkan::Vulkan)
