Fixed handling of alias structs
A fair number of extension struct types have been promoted and as such,
renamed to lose vendor suffixes.

However, these aliases were not tracked nor accounted for, so structs
that would have required work for cleanup or comparison were treated as
if they had no members at all.

The parsing script has been updated to pass alias information along, and
the cleanup/compare generation scripts updated to follow any alias and
use those member instead.

As well, because some structs have had members added or removed through
specification revisions, members also get first/last information to help
properly guard them.

Because of aliases however, using the switch case no longer works as
there are multiple enums for the same value, so changing to a big
if/else chain had to happen.

--- a/data/compare_excludes.yaml
+++ b/data/compare_excludes.yaml
@@ -5,6 +5,7 @@ VkSamplerCustomBorderColorCreateInfoEXT:
 VkAccelerationStructureGeometryMotionTrianglesDataNV:
 VkAccelerationStructureMotionInstanceNV:
 VkRenderingAttachmentInfo:
+VkRenderingAttachmentInfoKHR:
 VkAccelerationStructureGeometryTrianglesDataKHR:
 VkAccelerationStructureGeometryAabbsDataKHR:
 VkAccelerationStructureBuildGeometryInfoKHR:
