--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,8 @@
 include(prepare_catch.cmake)
 include(code-coverage.cmake)
 
+add_code_coverage_all_targets(EXCLUDE ".*/test/.*")
+
 prepare_catch(COMPILED_CATCH)
 
 find_package(Vulkan REQUIRED)
@@ -13,13 +15,13 @@ add_library(compilation_test STATIC c_compilation.c cpp_compilation.cpp)
 
 # Error Code
 add_executable(VkErrorCodeTests error_code.cpp)
-target_code_coverage(VkErrorCodeTests EXCLUDE ".*/test/.*")
+target_code_coverage(VkErrorCodeTests AUTO ALL EXCLUDE ".*/test/.*")
 
 add_test(NAME VkErrorCodeTests-Tests COMMAND VkErrorCodeTests)
 
 # Serialization
 add_executable(VkSerializationTests parsing.cpp serialization.cpp
                                     serialization64.cpp)
-target_code_coverage(VkSerializationTests EXCLUDE ".*/test/.*")
+target_code_coverage(VkSerializationTests AUTO ALL EXCLUDE ".*/test/.*")
 
 add_test(NAME VkSerializationTests-Tests COMMAND VkSerializationTests)
