--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,7 @@
+# Copyright (C) 2022 George Cave.
+#
+# SPDX-License-Identifier: Apache-2.0
+
 include(prepare_catch.cmake)
 include(code-coverage.cmake)
 include(sanitizers.cmake)
