Add some new 230+ structs to be excluded
New types dealing with micromaps have finicky types that the generation
tools can't handle yet.

--- a/data/compare_excludes.yaml
+++ b/data/compare_excludes.yaml
@@ -13,3 +13,7 @@ VkCopyAccelerationStructureToMemoryInfoKHR:
 VkCopyMemoryToAccelerationStructureInfoKHR:
 VkAccelerationStructureGeometryInstancesDataKHR:
 VkAccelerationStructureGeometryKHR:
+VkMicromapBuildInfoEXT:
+VkAccelerationStructureTrianglesOpacityMicromapEXT:
+VkCopyMicromapToMemoryInfoEXT:
+VkCopyMemoryToMicromapInfoEXT:
