--- a/data/compare_excludes.yaml
+++ b/data/compare_excludes.yaml
@@ -17,3 +17,4 @@ VkMicromapBuildInfoEXT:
 VkAccelerationStructureTrianglesOpacityMicromapEXT:
 VkCopyMicromapToMemoryInfoEXT:
 VkCopyMemoryToMicromapInfoEXT:
+VkDescriptorGetInfoEXT:
