--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -135,7 +135,7 @@ Debian 10/GCC (Old v97):
   stage: Linux
   parallel:
     matrix:
-    - ARCH: [amd64, arm64]
+    - ARCH: [amd64]
   image: docker.io/stabletec/build-core:debian-10
   tags:
     - container
@@ -145,7 +145,7 @@ Debian 10/GCC (Old v97):
     CC: gcc
     CXX: g++
   script:
-    - apt install -y libvulkan-dev
+    - apt update && apt install -y libvulkan-dev
     - mkdir build && cd build
     - cmake .. -GNinja -DCMAKE_BUILD_TYPE=Release -DBUILD_EXAMPLES=ON -DBUILD_TESTS=ON
     - ninja
@@ -155,7 +155,7 @@ Debian 10/Clang (Old v97):
   stage: Linux
   parallel:
     matrix:
-    - ARCH: [amd64, arm64]
+    - ARCH: [amd64]
   image: docker.io/stabletec/build-core:debian-10
   tags:
     - container
@@ -165,7 +165,7 @@ Debian 10/Clang (Old v97):
     CC: clang
     CXX: clang++
   script:
-    - apt install -y libvulkan-dev
+    - apt update && apt install -y libvulkan-dev
     - mkdir build && cd build
     - cmake .. -GNinja -DCMAKE_BUILD_TYPE=Release -DBUILD_EXAMPLES=ON -DBUILD_TESTS=ON
     - ninja
