--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -198,7 +198,7 @@ Windows/Clang-cl:
 macOS/AppleClang:
   parallel:
     matrix:
-    - ARCH: [amd64, arm64]
+    - ARCH: [arm64]
   tags:
     - macos
     - ${ARCH}
@@ -207,7 +207,7 @@ macOS/AppleClang:
 macOS/Clang:
   parallel:
     matrix:
-    - ARCH: [amd64, arm64]
+    - ARCH: [arm64]
   tags:
     - macos
     - ${ARCH}
